# foundry

./: .codex-task-backend.md  .codex-task-frontend.md  .env.example  .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/foundry/: cli.py  config.py  default_config.toml  events.py  logging_setup.py  main.py  setup.py
backend/foundry/agents/: actions.py  context.py  provider_factory.py
backend/foundry/agents/providers/: base.py  fallback.py  llamacpp.py  ollama.py  openclaw.py
backend/foundry/api/: agent_chat.py  config_control.py  execution.py  files.py  notes.py  projects.py  providers.py  resources.py  router.py  search.py  subprojects.py  system.py  tasks.py
backend/foundry/execution/: runner.py
backend/foundry/ingestion/: analysis.py  coordinator.py  extraction.py  pipeline.py
backend/foundry/ingestion/handlers/: base.py  pdf.py  webpage.py  youtube.py
backend/foundry/jobs/: runner.py
backend/foundry/search/: engine.py
backend/foundry/storage/: database.py  models.py  queries.py
backend/foundry/storage/migrations/: 001_initial.py  002_resource_status.py  003_search_fts.py  004_execution_log.py  (+1 more)
backend/foundry/workspace/: manager.py
backend/tests/: conftest.py
backend/tests/test_api/: test_agent_chat.py  test_execution.py  test_health.py  test_projects.py  test_providers.py  test_search.py  test_subprojects.py  test_subprojects_detail.py
backend/tests/test_e2e/: test_full_flow.py
backend/tests/test_ingestion/: test_coordinator.py  test_handlers.py  test_pipeline.py
backend/tests/test_storage/: test_database.py
(+30 files in other folders)
