[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry"
version = "0.1.0"
description = "Research-to-Projects Workspace"
readme = {text = "Foundry backend", content-type = "text/plain"}
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Patrick Mello"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "click>=8.1",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
handlers = [
    "yt-dlp>=2024.1.1",
    "pdfplumber>=0.11.0",
    "trafilatura>=1.8.0",
]
all = [
    "foundry[handlers]",
]
dev = [
    "foundry[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[project.scripts]
foundry = "foundry.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
